--- a/src/semana-5/aula-django/curso_django/templates/criar_turma_formulario.html
+++ b/src/semana-5/aula-django/curso_django/templates/criar_turma_formulario.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Python</title>
+    <title>Criar Turma Formulario</title>
 </head>
 <body>
-    Bem vindos ao curso de Python!
+    <h1>Funcionou</h1>
 </body>
 </html>
