--- a/src/semana-5/aula-django/curso_django/templates/listar_turma.html
+++ b/src/semana-5/aula-django/curso_django/templates/listar_turma.html
@@ -36,7 +36,7 @@
     <nav>
         <ul>
             <li>
-                <a href="{% url 'criar_turma_formulario' %}">
+                <a href="{% url 'criar_turma' %}">
                     Criar Turma
                 </a>
             </li>
