--- a/src/semana-5/aula-django/curso_django/templates/criar_turma.html
+++ b/src/semana-5/aula-django/curso_django/templates/criar_turma.html
@@ -1,49 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Turma</title>
-    <style>
-        .form {
-            width: 30%;
-            margin: 0 auto;
-        }
-        .form-group {
-            border: solid 1px #d8d8d8;
-            padding: 8px;
-            margin: 8px;
-        }
+{% extends 'base.html' %}
+{% load static %}
+{% block title %} Criar Turma {% endblock %}
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/criar_turma.css' %}">
+{% endblock %}
 
-        .form-group input {
-            padding: 4px;
-            border-radius: 4px;
-            border: solid 1px gray;
-        }
-
-        form input[type='submit'] {
-            width: 100%;
-            background: rgb(151, 55, 246);
-            color: white;
-            border-radius: 4px;
-            border: solid 1px transparent;
-            padding: 8px;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .form-group .error {
-            text-align: center;
-            font-weight: bold;
-            color: white;
-            background-color: red;
-            padding: 8px;
-            margin: 8px;
-            border-radius: 4px;
-        }
-    </style>
-</head>
-<body>
+{% block content %}
     <form class="form" action="{% url 'criar_turma' %}" method="post">
         {% csrf_token %}
 
@@ -81,5 +43,4 @@
 
         <input class="form-group" type="submit" value="Criar Turma">
     </form>
-</body>
-</html>
+{% endblock %}
