--- a/src/semana-5/aula-django/curso_django/static/css/main.css
+++ b/src/semana-5/aula-django/curso_django/static/css/main.css
@@ -45,3 +45,44 @@ footer {
     font-weight: bold;
     color: #343090;
 }
+
+.messages {
+    max-width: 400px;
+    text-align: center;
+    margin: 4px;
+    padding: 4px;
+    border-radius: 4px;
+    border:  solid 1px black;
+}
+.success {
+    background-color: green;
+    color: white;
+}
+.error {
+    background-color: red;
+    color: white;
+}
+.warning {
+    background-color: yellow;
+    color: black;
+}
+.info {
+    background-color: grey;
+    color: black;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar .logo {
+        margin-bottom: 15px;
+    }
+
+    .navbar .nav-links {
+        flex-direction: column;
+        width: 100%;
+    }
+}
