--- a/src/semana-5/aula-django/curso_django/templates/base.html
+++ b/src/semana-5/aula-django/curso_django/templates/base.html
@@ -24,6 +24,15 @@
             </li>
         </ul>
     </nav>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="messages {{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %} 
+
     {% block content %}
     
     {% endblock %}
