--- a/src/semana-5/aula-django/curso_django/templates/listar_turma.html
+++ b/src/semana-5/aula-django/curso_django/templates/listar_turma.html
@@ -1,72 +1,38 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listar Turma</title>
-    <style>
-        .messages {
-            max-width: 400px;
-            text-align: center;
-            margin: 4px;
-            padding: 4px;
-            border-radius: 4px;
-            border:  solid 1px black;
-        }
-        .success {
-            background-color: green;
-            color: white;
-        }
-        .error {
-            background-color: red;
-            color: white;
-        }
-        .warning {
-            background-color: yellow;
-            color: black;
-        }
-        .info {
-            background-color: grey;
-            color: black;
-        }
-    </style>
-</head>
-<body>
-    <h1>Turmas</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="{% url 'criar_turma' %}">
-                    Criar Turma
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'criar_professor_formulario' %}">
-                    Criar Professor
-                </a>
-            </li>
-        </ul>
-    </nav>    
-        {% if messages %}
-            {% for message in messages %}
-                <div class="messages {{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}    
-    <hr>
-    {% for turma in turmas %}
-        Nome da turma: {{ turma.nome }} <br />
-        Data Início: {{ turma.inicio_aulas }}<br />
-        Data fim : {{ turma.fim_aulas }}<br />
-        Ativa: {{ turma.ativa }}<br />
-        <br>
-        Professores: 
-        {% for professor in turma.professores.all %}
-            {{ professor.nome }} |
-        {% endfor %}
-        <hr>
-    {% endfor %}
+{% extends 'base.html' %}
+{% load static %}
+{% block title %} Listagem das Turmas {% endblock %}
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/listar_turma.css' %}">
+{% endblock %}
 
-</body>
-</html>
+{% block content %}
+
+<div class="lista-container">
+    {% for turma in turmas %}
+        <div class="turma">
+            <div class="titulo">{{ turma.nome }}</div>
+            <div class="logo">
+                <img src="{% static 'img/logo_raro.webp' %}" alt="Logo Turma">
+            </div>
+            <div class="infos">
+                <p>Data Início: {{ turma.inicio_aulas }}</p>
+                <p>Data Fim : {{ turma.fim_aulas }}</p>
+                <p>Turma Ativa:
+                    {% if turma.ativa %}
+                        Sim
+                    {% else %}
+                        Não
+                    {% endif %}
+                </p>
+            </div>
+            <hr>
+            <div class="professores">
+                Professores: 
+                {% for professor in turma.professores.all %}
+                    {{ professor.nome }} |
+                {% endfor %}
+            </div>
+        </div>
+    {% endfor %}
+</div>
+{% endblock %}
